Add ContactReporter, so I can check ContactResult numerically.

--- a/tutorials/authoring_multibody_simulation.ipynb
+++ b/tutorials/authoring_multibody_simulation.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,6 +426,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Damrong: ContactReporter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydrake.systems.framework import LeafSystem\n",
+    "from pydrake.common.value import AbstractValue\n",
+    "from pydrake.multibody.plant import ContactResults\n",
+    "\n",
+    "class ContactReporter(LeafSystem):\n",
+    "    def __init__(self, scene_graph):\n",
+    "        super().__init__()  # Don't forget to initialize the base class.\n",
+    "        self._scene_graph = scene_graph\n",
+    "        self.DeclareAbstractInputPort(\n",
+    "            name=\"contact_results\",\n",
+    "            model_value=AbstractValue.Make(\n",
+    "                # Input port will take ContactResults from MultibodyPlant\n",
+    "                ContactResults()))\n",
+    "        # Calling `ForcedPublish()` will trigger the callback.\n",
+    "        self.DeclareForcedPublishEvent(self.Publish)\n",
+    "        \n",
+    "    def Publish(self, context):\n",
+    "        print()\n",
+    "        print(f\"ContactReporter::Publish() called at time={context.get_time()}\")\n",
+    "        contact_results = self.get_input_port().Eval(context)\n",
+    "        \n",
+    "        num_hydroelastic_contacts = contact_results.num_hydroelastic_contacts()\n",
+    "        print(f\"num_hydroelastic_contacts() = {num_hydroelastic_contacts}\")\n",
+    "        \n",
+    "        for c in range(num_hydroelastic_contacts):\n",
+    "            print()\n",
+    "            print(f\"hydroelastic_contact_info({c}): {c}-th hydroelastic contact patch\")\n",
+    "            hydroelastic_contact_info = contact_results.hydroelastic_contact_info(c)\n",
+    "            \n",
+    "            spatial_force = hydroelastic_contact_info.F_Ac_W()\n",
+    "            print(f\"F_Ac_W(): spatial force (on body A, at centroid of contact surface, in World frame) = \\\\\")\n",
+    "            print(f\"{spatial_force}\")\n",
+    "                        \n",
+    "            print(f\"contact_surface()\")\n",
+    "            contact_surface = hydroelastic_contact_info.contact_surface()\n",
+    "            num_faces = contact_surface.num_faces()\n",
+    "            total_area = contact_surface.total_area()\n",
+    "            centroid = contact_surface.centroid()\n",
+    "            id_M = contact_surface.id_M()\n",
+    "            id_N = contact_surface.id_N()\n",
+    "            scene_graph_inspector = self._scene_graph.model_inspector()\n",
+    "            name_M = scene_graph_inspector.GetName(id_M)\n",
+    "            name_N = scene_graph_inspector.GetName(id_N)\n",
+    "            print(f\"name_M = {name_M}\")\n",
+    "            print(f\"name_N = {name_N}\")\n",
+    "            print(f\"total_area(): area of contact surface in m^2 = {total_area}\")\n",
+    "            print(f\"num_faces(): number of polygons or triangles = {num_faces}\")\n",
+    "            print(f\"centroid(): centroid (in World frame) = {centroid}\")        \n",
+    "        \n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Drake terminology\n",
     "\n",
     "In Drake, a [`System`](https://drake.mit.edu/doxygen_cxx/classdrake_1_1systems_1_1_system.html) is the building block that has input/output ports to connect with other Systems. For example, MultibodyPlant and SceneGraph are both Systems. A [`Diagram`](https://drake.mit.edu/doxygen_cxx/classdrake_1_1systems_1_1_diagram.html) is used to represent a meta-system that may have several interconnected Systems that function collectively.\n",
@@ -447,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,6 +565,12 @@
     "                     publish_period = 1 / 512.0,\n",
     "                     publish_contacts = True),\n",
     "        builder=builder, meshcat=meshcat)\n",
+    "    \n",
+    "    # Damrong: Add ContactReporter to report contact at forced publish\n",
+    "    contact_reporter = builder.AddSystem(ContactReporter(scene_graph))    \n",
+    "    builder.Connect(plant.get_contact_results_output_port(),\n",
+    "                    contact_reporter.get_input_port(0))\n",
+    "    \n",
     "\n",
     "    diagram = builder.Build()\n",
     "    return diagram"
@@ -520,9 +591,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ContactReporter::Publish() called at time=10.0\n",
+      "num_hydroelastic_contacts() = 3\n",
+      "\n",
+      "hydroelastic_contact_info(0): 0-th hydroelastic contact patch\n",
+      "F_Ac_W(): spatial force (on body A, at centroid of contact surface, in World frame) = \\\n",
+      "SpatialForce(\n",
+      "  tau=[0.013571882747526664, 0.003810660174513966, -1.6883395280549135e-13],\n",
+      "  f=[4.906890881953853e-11, 3.857334102968062e-12, 4.0319099999500025],\n",
+      ")\n",
+      "contact_surface()\n",
+      "name_M = 003_cracker_box::box_collision\n",
+      "name_N = table_top::collision\n",
+      "total_area(): area of contact surface in m^2 = 0.01610618077197107\n",
+      "num_faces(): number of polygons or triangles = 10\n",
+      "centroid(): centroid (in World frame) = [-2.23861170e-01  2.28301497e-01 -6.25868198e-07]\n",
+      "\n",
+      "hydroelastic_contact_info(1): 1-th hydroelastic contact patch\n",
+      "F_Ac_W(): spatial force (on body A, at centroid of contact surface, in World frame) = \\\n",
+      "SpatialForce(\n",
+      "  tau=[0.0, 0.0, 0.0],\n",
+      "  f=[0.0, 0.0, 0.0],\n",
+      ")\n",
+      "contact_surface()\n",
+      "name_M = 003_cracker_box::point_collision1\n",
+      "name_N = table_top::collision\n",
+      "total_area(): area of contact surface in m^2 = 3.464101615706961e-14\n",
+      "num_faces(): number of polygons or triangles = 4\n",
+      "centroid(): centroid (in World frame) = [-0.11593064  0.30463482 -0.00049804]\n",
+      "\n",
+      "hydroelastic_contact_info(2): 2-th hydroelastic contact patch\n",
+      "F_Ac_W(): spatial force (on body A, at centroid of contact surface, in World frame) = \\\n",
+      "SpatialForce(\n",
+      "  tau=[0.0, 0.0, 0.0],\n",
+      "  f=[0.0, 0.0, 0.0],\n",
+      ")\n",
+      "contact_surface()\n",
+      "name_M = 003_cracker_box::point_collision3\n",
+      "name_N = table_top::collision\n",
+      "total_area(): area of contact surface in m^2 = 3.464101615027911e-14\n",
+      "num_faces(): number of polygons or triangles = 4\n",
+      "centroid(): centroid (in World frame) = [-0.12567148  0.14593348 -0.00049905]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def initialize_simulation(diagram):\n",
     "    simulator = Simulator(diagram)\n",
@@ -536,10 +657,13 @@
     "    meshcat.StartRecording()\n",
     "    simulator.AdvanceTo(10.0)\n",
     "    meshcat.PublishRecording()\n",
+    "    \n",
+    "    diagram.ForcedPublish(simulator.get_context())\n",
     "\n",
     "# Run the simulation with a small time step. Try gradually increasing it!\n",
     "run_simulation(sim_time_step=0.0001)\n",
-    "html_file = open(\"/home/damrongguoy/2023-04-04_record_authoring_multibody_simulation.html\", \"wt\")\n",
+    "\n",
+    "html_file = open(\"/home/damrongguoy/2023-04-05_record_authoring_multibody_simulation.html\", \"wt\")\n",
     "html_file.write(meshcat.StaticHtml())\n",
     "html_file.close()\n"
    ]
