dt 1e-5s with 10pi rad/s

--- a/tutorials/hydro_compliant_cylinder_compliant_box.ipynb
+++ b/tutorials/hydro_compliant_cylinder_compliant_box.ipynb
@@ -480,7 +480,7 @@
     {
      "data": {
       "text/plain": [
-       "<pydrake.systems.analysis.SimulatorStatus at 0x7f91720efc70>"
+       "<pydrake.systems.analysis.SimulatorStatus at 0x7faae5d67bb0>"
       ]
      },
      "execution_count": 7,
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +612,8 @@
     "        ContactVisualizerParams(\n",
     "            publish_period= 1.0 / 512.0,\n",
     "            newtons_per_meter= 1e2,\n",
-    "            newton_meters_per_meter= 5e-1))\n",
+    "            newton_meters_per_meter= 5e-1,\n",
+    "            moment_threshold=1e-3))\n",
     "\n",
     "    return builder, plant"
    ]
@@ -621,7 +622,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run simulation with contact visualization\n",
+    "## Set initial velocity and run simulation\n",
     "\n",
     "The following code will run the simulation and show pictures like this:\n",
     "\n",
@@ -638,18 +639,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use continuous integrator by setting time_step=0\n",
+    "## Use time_step=1e-5, 5 revolutions/second = 10pi radians/s\n",
+    "\n",
+    "It took about 10 minutes wallclock time to run 15 seconds simulated time.\n",
     "\n",
     "```\n",
+    "General stats regarding discrete updates:\n",
+    "Number of time steps taken (simulator stats) = 1507493\n",
+    "Simulator publishes every time step: false\n",
+    "Number of publishes = 7681\n",
+    "Number of discrete updates = 1500000\n",
+    "Number of \"unrestricted\" updates = 0\n",
+    "\n",
+    "Note: the following integrator took zero steps. The simulator exclusively used the discrete solver.\n",
+    "\n",
+    "Stats for integrator RungeKutta3Integrator with error control:\n",
+    "Number of time steps taken (integrator stats) = 0\n",
+    "Initial time step taken = nan        s\n",
+    "Largest time step taken = nan        s\n",
+    "Smallest adapted step size = nan        s\n",
+    "Number of steps shrunk due to error control = 0\n",
+    "Number of derivative evaluations = 0\n",
+    "Number of steps shrunk due to convergence-based failure = 0\n",
+    "Number of convergence-based step failures (should match) = 0\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ContactReporter::Publish() called at time=15.0\n",
+      "num_hydroelastic_contacts() = 1\n",
+      "\n",
+      "hydroelastic_contact_info(0): 0-th hydroelastic contact patch\n",
+      "F_Ac_W(): spatial force (on body A, at centroid of contact surface, in World frame) = \\\n",
+      "SpatialForce(\n",
+      "  tau=[2.1325021232059996e-12, -1.3818455822671241e-11, -1.6366423232162475e-18],\n",
+      "  f=[-4.788019589109581e-11, -1.231214577913535e-11, 9.81000000069832],\n",
+      ")\n",
+      "contact_surface()\n",
+      "total_area(): area of contact surface in m^2 = 0.0050138449172460135\n",
+      "num_faces(): number of polygons or triangles = 335\n",
+      "centroid(): centroid (in World frame) = [ 0.00944583  0.06972728 -0.01000001]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pydrake.systems.analysis import Simulator\n",
     "from pydrake.systems.analysis import PrintSimulatorStatistics\n",
+    "\n",
+    "def run_simulation_with_contact_report_and_viz(sim_time, time_step=1e-3, solver=\"tamsi\"):\n",
+    "    builder, plant = create_scene_with_contact_report_and_viz(time_step, solver)\n",
+    "    \n",
+    "    diagram = builder.Build()\n",
+    "    \n",
+    "    simulator = Simulator(diagram)\n",
+    "    simulator.Initialize()\n",
+    "    simulator.set_target_realtime_rate(1)\n",
+    "    \n",
+    "    # Initial angular velocity, radians per second\n",
+    "    omega = 10 * np.pi\n",
+    "    v_init = np.hstack((np.array([0, 0, omega, 0, 0, 0]), np.array([0, 0, omega, 0, 0, 0])))\n",
+    "    \n",
+    "    plant_context = diagram.GetSubsystemContext(plant, simulator.get_context())\n",
+    "    plant.SetVelocities(plant_context, v_init)\n",
+    "    \n",
+    "    meshcat.StartRecording(frames_per_second=512.0)\n",
+    "    simulator.AdvanceTo(sim_time)\n",
+    "    meshcat.StopRecording()\n",
     "\n",
     "    PrintSimulatorStatistics(simulator)\n",
     "\n",
-    "run_simulation_with_contact_report_and_viz(sim_time=15, time_step=0)\n",
+    "    # Numerically report contact results at the end of simulation.\n",
+    "    diagram.ForcedPublish(simulator.get_context())\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "run_simulation_with_contact_report_and_viz(sim_time=15, time_step=1e-5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use continuous integrator by setting time_step=0\n",
+    "\n",
+    "```\n",
+    "> from pydrake.systems.analysis import PrintSimulatorStatistics\n",
+    ">\n",
+    ">    PrintSimulatorStatistics(simulator)\n",
+    ">\n",
+    "> run_simulation_with_contact_report_and_viz(sim_time=15, time_step=0)\n",
     "```\n",
     "\n",
-    "The 15s simulated time took 6 or 7 minutes of wallclock time.\n",
-    "I need Hunt-Crossley dissipation 1.25. Previously zero dissipation caused hydro to keep going and going, which is good because it confirms there is no numerical dissipation. This is with friction coefficients (both mu_dynamic and mu_static) 0.5.\n",
+    "The 15s simulated time took **6 or 7 minutes** of wallclock time.\n",
+    "I need Hunt-Crossley dissipation 1.25.\n",
+    "Previously zero dissipation caused hydro to keep going and going.\n",
+    "This is good because it confirms that there is no numerical dissipation.\n",
+    "This is with friction coefficients (both mu_dynamic and mu_static) 0.5.\n",
     "\n",
     "```\n",
     "General stats regarding discrete updates:\n",
@@ -668,37 +763,18 @@
     "Number of derivative evaluations = 897837\n",
     "Number of steps shrunk due to convergence-based failure = 0\n",
     "Number of convergence-based step failures (should match) = 0\n",
-    "```"
+    "```\n",
+    "\n",
+    "Change the following block from Markdown to Python to run it."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "ContactReporter::Publish() called at time=15.0\n",
-      "num_hydroelastic_contacts() = 1\n",
-      "\n",
-      "hydroelastic_contact_info(0): 0-th hydroelastic contact patch\n",
-      "F_Ac_W(): spatial force (on body A, at centroid of contact surface, in World frame) = \\\n",
-      "SpatialForce(\n",
-      "  tau=[-2.7014176313085922e-11, -5.7194300340776504e-11, -5.234407819487366e-16],\n",
-      "  f=[-1.906066884233594e-11, 1.4154190242361282e-11, 8.683403176006777],\n",
-      ")\n",
-      "contact_surface()\n",
-      "total_area(): area of contact surface in m^2 = 0.005013844611759782\n",
-      "num_faces(): number of polygons or triangles = 306\n",
-      "centroid(): centroid (in World frame) = [-0.01710702  0.12760661 -0.01000001]\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
+    "Code \n",
+    "\n",
+    "```\n",
     "from pydrake.systems.analysis import Simulator\n",
     "from pydrake.systems.analysis import PrintSimulatorStatistics\n",
     "\n",
@@ -711,7 +787,9 @@
     "    simulator.Initialize()\n",
     "    simulator.set_target_realtime_rate(1)\n",
     "    \n",
-    "    v_init = np.hstack((np.array([0, 0, 2 * np.pi, 0, 0, 0]), np.array([0, 0, 2 * np.pi, 0, 0, 0])))\n",
+    "    # Initial angular velocity, radians per second\n",
+    "    omega = 2 * np.pi\n",
+    "    v_init = np.hstack((np.array([0, 0, omega, 0, 0, 0]), np.array([0, 0, omega, 0, 0, 0])))\n",
     "    \n",
     "    plant_context = diagram.GetSubsystemContext(plant, simulator.get_context())\n",
     "    plant.SetVelocities(plant_context, v_init)\n",
@@ -727,7 +805,31 @@
     "    \n",
     "\n",
     "    \n",
-    "run_simulation_with_contact_report_and_viz(sim_time=15, time_step=0)"
+    "run_simulation_with_contact_report_and_viz(sim_time=15, time_step=0)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Output\n",
+    "\n",
+    "```\n",
+    "ContactReporter::Publish() called at time=15.0\n",
+    "num_hydroelastic_contacts() = 1\n",
+    "\n",
+    "hydroelastic_contact_info(0): 0-th hydroelastic contact patch\n",
+    "F_Ac_W(): spatial force (on body A, at centroid of contact surface, in World frame) = \\\n",
+    "SpatialForce(\n",
+    "  tau=[-2.7014176313085922e-11, -5.7194300340776504e-11, -5.234407819487366e-16],\n",
+    "  f=[-1.906066884233594e-11, 1.4154190242361282e-11, 8.683403176006777],\n",
+    ")\n",
+    "contact_surface()\n",
+    "total_area(): area of contact surface in m^2 = 0.005013844611759782\n",
+    "num_faces(): number of polygons or triangles = 306\n",
+    "centroid(): centroid (in World frame) = [-0.01710702  0.12760661 -0.01000001]\n",
+    "```"
    ]
   },
   {
@@ -793,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,11 +934,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#html_file = open(\"/home/damrongguoy/2023-04-04_EulerDisk_RungeKutta3Integrator_HCDissipation1.25_mu0.5_15seconds_movie.html\", \"wt\")\n",
+    "#html_file = open(\"/home/damrongguoy/2023-04-06_EulerDisk_dt1e-5_10PiPerSec_playback.html\", \"wt\")\n",
     "#html_file.write(meshcat.StaticHtml())\n",
     "#html_file.close()"
    ]
