Grid and points near mid-surfaces

--- a/tutorials/play_SignedDistance_EDContact.ipynb
+++ b/tutorials/play_SignedDistance_EDContact.ipynb
@@ -974,6 +974,8 @@
     }
    ],
    "source": [
+    "meshcat.Delete(\"signed_distances\")\n",
+    "\n",
     "scene_graph = diagram.GetSubsystemByName(\"scene_graph\")\n",
     "inspector = scene_graph.model_inspector()\n",
     "query_object = scene_graph.get_query_output_port().Eval(\n",
@@ -983,6 +985,25 @@
     "# +3.8 cm outside the bowl, and +4.4 cm above the table top.\n",
     "p_WQ = [-0.016, -0.012, 0.044]\n",
     "signed_distances = query_object.ComputeSignedDistanceToPoint(p_WQ)\n",
+    "\n",
+    "def DrawSignedDistanceData(p_WQ, d):\n",
+    "  geometry_id = d.id_G\n",
+    "  geometry_name = inspector.GetName(geometry_id)\n",
+    "  grad_W = d.grad_W  \n",
+    "  p_GN = d.p_GN  \n",
+    "  X_WG = query_object.GetPoseInWorld(geometry_id)\n",
+    "  p_WN = X_WG.multiply(p_GN)\n",
+    "  color = Rgba(r=1, g=0, b=0, a=1)\n",
+    "  if d.distance < 0:\n",
+    "    color = Rgba(r=0, g=0, b=1, a=1)    \n",
+    "  # Draw a line between the query point and its nearest point.  \n",
+    "  meshcat.SetLine(path=f\"signed_distances/{geometry_name}/nearest/to_p_WQ_{p_WQ}\",\n",
+    "        vertices=np.array([p_WQ, p_WN]).T,\n",
+    "        line_width=2.0, rgba=color)\n",
+    "  # Draw a 1-cm line from the query point in the gradient direction.\n",
+    "  meshcat.SetLine(path=f\"signed_distances/{geometry_name}/grad_W/to_p_WQ_{p_WQ}\",\n",
+    "        vertices=np.array([p_WQ, p_WQ + 0.01 * grad_W]).T,\n",
+    "        line_width=4.0, rgba=Rgba(r=0.7, g=0.7, b=0.7, a=1)) \n",
     "\n",
     "import numpy as np\n",
     "for d in signed_distances:\n",
@@ -996,17 +1017,7 @@
     "  print(f\"p_GN = {p_GN}\")\n",
     "  print(f\"id_G = {geometry_id}\")\n",
     "  print()\n",
-    "  X_WG = query_object.GetPoseInWorld(geometry_id)\n",
-    "  p_WN = X_WG.multiply(p_GN)\n",
-    "  # Draw a line between the query point and its nearest point.  \n",
-    "  meshcat.SetLine(path=f\"signed_distances/{geometry_name}\",\n",
-    "                vertices=np.array([p_WQ, p_WN]).T,\n",
-    "                line_width=2.0, rgba=Rgba(r=0.1, g=0.1, b=0.1, a=1))\n",
-    "  # Draw a 1-cm line from the query point in the gradient direction.\n",
-    "  meshcat.SetLine(path=f\"signed_distances/{geometry_name}/grad_W\",\n",
-    "                vertices=np.array([p_WQ, p_WQ + 0.01 * grad_W]).T,\n",
-    "                line_width=4.0, rgba=Rgba(r=0.7, g=0.7, b=0.7, a=1))\n",
-    "\n",
+    "  DrawSignedDistanceData(p_WQ, d)\n",
     "    "
    ]
   },
@@ -1021,8 +1032,33 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
+    "meshcat.Delete(\"signed_distances\")\n",
+    "\n",
+    "def DrawToNearestPoint(p_WQ, d):\n",
+    "  geometry_id = d.id_G\n",
+    "  geometry_name = inspector.GetName(geometry_id)\n",
+    "  grad_W = d.grad_W  \n",
+    "  p_GN = d.p_GN  \n",
+    "  X_WG = query_object.GetPoseInWorld(geometry_id)\n",
+    "  p_WN = X_WG.multiply(p_GN)\n",
+    "  color = Rgba(r=1, g=0, b=0, a=1)\n",
+    "  if d.distance < 0:\n",
+    "    color = Rgba(r=0, g=0, b=1, a=1)    \n",
+    "  # Draw a line between the query point and its nearest point.  \n",
+    "  meshcat.SetLine(path=f\"signed_distances/{geometry_name}/nearest/to_p_WQ_{p_WQ}\",\n",
+    "        vertices=np.array([p_WQ, p_WN]).T,\n",
+    "        line_width=2.0, rgba=color)\n",
+    "\n",
     "# 5 x 5 x 5 Grid of [-0.05, 0.05]x[-0.05, 0.05]x[-0.05, 0.05] meters\n",
     "import numpy as np\n",
     "for x in np.linspace(-0.05, 0.05, 5):\n",
@@ -1031,20 +1067,77 @@
     "      p_WQ = [x, y, z]\n",
     "      signed_distances = query_object.ComputeSignedDistanceToPoint(p_WQ)\n",
     "      for d in signed_distances:\n",
-    "          geometry_id = d.id_G\n",
-    "          geometry_name = inspector.GetName(geometry_id)\n",
-    "          grad_W = d.grad_W  \n",
-    "          p_GN = d.p_GN  \n",
-    "          X_WG = query_object.GetPoseInWorld(geometry_id)\n",
-    "          p_WN = X_WG.multiply(p_GN)\n",
-    "          # Draw a line between the query point and its nearest point.  \n",
-    "          meshcat.SetLine(path=f\"signed_distances/{geometry_name}/nearest/to_p_WQ_{p_WQ}\",\n",
-    "                vertices=np.array([p_WQ, p_WN]).T,\n",
-    "                line_width=2.0, rgba=Rgba(r=0.1, g=0.1, b=0.1, a=1))\n",
-    "          # Draw a 1-cm line from the query point in the gradient direction.\n",
-    "          meshcat.SetLine(path=f\"signed_distances/{geometry_name}/grad_W/to_p_WQ_{p_WQ}\",\n",
-    "                vertices=np.array([p_WQ, p_WQ + 0.01 * grad_W]).T,\n",
-    "                line_width=4.0, rgba=Rgba(r=0.7, g=0.7, b=0.7, a=1))\n"
+    "          DrawToNearestPoint(p_WQ, d)\n",
+    "\n",
+    "print(\"Done\")            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query points near medial surfaces between objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "meshcat.Delete(\"signed_distances\")\n",
+    "\n",
+    "def DrawSignedDistanceData(p_WQ, d):\n",
+    "  geometry_id = d.id_G\n",
+    "  geometry_name = inspector.GetName(geometry_id)\n",
+    "  grad_W = d.grad_W  \n",
+    "  p_GN = d.p_GN  \n",
+    "  X_WG = query_object.GetPoseInWorld(geometry_id)\n",
+    "  p_WN = X_WG.multiply(p_GN)\n",
+    "  color = Rgba(r=1, g=0, b=0, a=1)\n",
+    "  if d.distance < 0:\n",
+    "    color = Rgba(r=0, g=0, b=1, a=1)    \n",
+    "  # Draw a line between the query point and its nearest point.  \n",
+    "  meshcat.SetLine(path=f\"signed_distances/{geometry_name}/nearest/to_p_WQ_{p_WQ}\",\n",
+    "        vertices=np.array([p_WQ, p_WN]).T,\n",
+    "        line_width=2.0, rgba=color)\n",
+    "  # Draw a 1-cm line from the query point in the gradient direction.\n",
+    "  meshcat.SetLine(path=f\"signed_distances/{geometry_name}/grad_W/to_p_WQ_{p_WQ}\",\n",
+    "        vertices=np.array([p_WQ, p_WQ + 0.01 * grad_W]).T,\n",
+    "        line_width=4.0, rgba=Rgba(r=0.7, g=0.7, b=0.7, a=1))    \n",
+    "\n",
+    "def DrawSignedDistanceDataIfNearMidSurface(p_WQ, d0, d1, d2):\n",
+    "    if abs(d0.distance - d1.distance) < 0.001 and \\\n",
+    "       abs(d0.distance) < abs(d2.distance):        \n",
+    "      DrawToNearestPoint(p_WQ, d0)\n",
+    "      DrawToNearestPoint(p_WQ, d1)\n",
+    "    \n",
+    "\n",
+    "# 15 x 15 x 15 Grid of [-0.10, 0.10]x[-0.10, 0.10]x[-0.10, 0.10] meters\n",
+    "import numpy as np\n",
+    "for x in np.linspace(-0.10, 0.10, 15):\n",
+    "  for y in np.linspace(-0.10, 0.10, 15):\n",
+    "    for z in np.linspace(-0.10, 0.10, 15):\n",
+    "      p_WQ = [x, y, z]\n",
+    "      signed_distances = query_object.ComputeSignedDistanceToPoint(p_WQ)\n",
+    "      d0 = signed_distances[0]\n",
+    "      d1 = signed_distances[1]\n",
+    "      d2 = signed_distances[2]\n",
+    "    \n",
+    "      DrawSignedDistanceDataIfNearMidSurface(p_WQ, d0, d1, d2)\n",
+    "      DrawSignedDistanceDataIfNearMidSurface(p_WQ, d1, d2, d0)\n",
+    "      DrawSignedDistanceDataIfNearMidSurface(p_WQ, d2, d0, d1)\n",
+    "        \n",
+    "      \n",
+    "print(\"Done\")"
    ]
   },
   {
@@ -1058,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
