Draw surface with SDF value

--- a/tutorials/play_SignedDistance_EDContact.ipynb
+++ b/tutorials/play_SignedDistance_EDContact.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "from IPython.display import Code\n",
     "\n",
-    "from pydrake.geometry import StartMeshcat, Rgba\n",
+    "from pydrake.geometry import StartMeshcat, Rgba, ConvertVolumeToSurfaceMesh\n",
     "from pydrake.math import RigidTransform\n",
     "from pydrake.multibody.meshcat import ContactVisualizer, ContactVisualizerParams\n",
     "from pydrake.multibody.parsing import PackageMap, Parser\n",
@@ -1095,28 +1095,10 @@
    "source": [
     "meshcat.Delete(\"signed_distances\")\n",
     "\n",
-    "def DrawSignedDistanceData(p_WQ, d):\n",
-    "  geometry_id = d.id_G\n",
-    "  geometry_name = inspector.GetName(geometry_id)\n",
-    "  grad_W = d.grad_W  \n",
-    "  p_GN = d.p_GN  \n",
-    "  X_WG = query_object.GetPoseInWorld(geometry_id)\n",
-    "  p_WN = X_WG.multiply(p_GN)\n",
-    "  color = Rgba(r=1, g=0, b=0, a=1)\n",
-    "  if d.distance < 0:\n",
-    "    color = Rgba(r=0, g=0, b=1, a=1)    \n",
-    "  # Draw a line between the query point and its nearest point.  \n",
-    "  meshcat.SetLine(path=f\"signed_distances/{geometry_name}/nearest/to_p_WQ_{p_WQ}\",\n",
-    "        vertices=np.array([p_WQ, p_WN]).T,\n",
-    "        line_width=2.0, rgba=color)\n",
-    "  # Draw a 1-cm line from the query point in the gradient direction.\n",
-    "  meshcat.SetLine(path=f\"signed_distances/{geometry_name}/grad_W/to_p_WQ_{p_WQ}\",\n",
-    "        vertices=np.array([p_WQ, p_WQ + 0.01 * grad_W]).T,\n",
-    "        line_width=4.0, rgba=Rgba(r=0.7, g=0.7, b=0.7, a=1))    \n",
-    "\n",
     "def DrawSignedDistanceDataIfNearMidSurface(p_WQ, d0, d1, d2):\n",
     "    if abs(d0.distance - d1.distance) < 0.001 and \\\n",
-    "       abs(d0.distance) < abs(d2.distance):        \n",
+    "       abs(d0.distance) < abs(d2.distance) and \\\n",
+    "       abs(d1.distance) < abs(d2.distance) :        \n",
     "      DrawToNearestPoint(p_WQ, d0)\n",
     "      DrawToNearestPoint(p_WQ, d1)\n",
     "    \n",
@@ -1144,6 +1126,167 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Interpolate Bowl's SDF onto Bell Pepper's surface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<GeometryId value=189>\n",
+      "<GeometryId value=196>\n",
+      "pepper_tri_mesh.num_vertices() = 486\n",
+      "bowl_tri_mesh.num_vertices() = 3957\n",
+      "Done\n",
+      "CPU times: user 316 ms, sys: 28.9 ms, total: 345 ms\n",
+      "Wall time: 306 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "meshcat.Delete(\"signed_distances\")\n",
+    "\n",
+    "all_ids = inspector.GetAllGeometryIds()\n",
+    "for id in all_ids:\n",
+    "  if inspector.GetName(id) == \"yellow_bell_pepper_no_stem::collision\" :\n",
+    "    pepper_id = id\n",
+    "  if inspector.GetName(id) == \"bowl::collision\" :\n",
+    "    bowl_id = id\n",
+    "\n",
+    "print(pepper_id)\n",
+    "print(bowl_id)\n",
+    "\n",
+    "pepper_tri_mesh = ConvertVolumeToSurfaceMesh(\n",
+    "    inspector.maybe_get_hydroelastic_mesh(pepper_id))\n",
+    "print(f\"pepper_tri_mesh.num_vertices() = {pepper_tri_mesh.num_vertices()}\")\n",
+    "\n",
+    "bowl_tri_mesh = ConvertVolumeToSurfaceMesh(\n",
+    "    inspector.maybe_get_hydroelastic_mesh(bowl_id))\n",
+    "print(f\"bowl_tri_mesh.num_vertices() = {bowl_tri_mesh.num_vertices()}\")\n",
+    "\n",
+    "\n",
+    "# Signed distances at pepper points from bowl mesh\n",
+    "# P is the local frame of the pepper\n",
+    "X_WP = query_object.GetPoseInWorld(pepper_id)\n",
+    "for p_PQ in pepper_tri_mesh.vertices() :\n",
+    "  p_WQ = X_WP.multiply(p_PQ)\n",
+    "  signed_distances = query_object.ComputeSignedDistanceToPoint(p_WQ)\n",
+    "  for d in signed_distances:\n",
+    "    if d.id_G == bowl_id:\n",
+    "      DrawToNearestPoint(p_WQ, d)\n",
+    "    \n",
+    "print(\"Done\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Paint Bowl's SDF values on Bell Pepper's surface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pepper_mesh.num_vertices() = 486\n",
+      "bowl_mesh.num_vertices() = 3957\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "meshcat.Delete(\"signed_distances\")\n",
+    "\n",
+    "all_ids = inspector.GetAllGeometryIds()\n",
+    "for id in all_ids:\n",
+    "  if inspector.GetName(id) == \"yellow_bell_pepper_no_stem::collision\" :\n",
+    "    pepper_id = id\n",
+    "  if inspector.GetName(id) == \"bowl::collision\" :\n",
+    "    bowl_id = id\n",
+    "\n",
+    "pepper_mesh = ConvertVolumeToSurfaceMesh(\n",
+    "    inspector.maybe_get_hydroelastic_mesh(pepper_id))\n",
+    "print(f\"pepper_mesh.num_vertices() = {pepper_mesh.num_vertices()}\")\n",
+    "\n",
+    "bowl_mesh = ConvertVolumeToSurfaceMesh(\n",
+    "    inspector.maybe_get_hydroelastic_mesh(bowl_id))\n",
+    "print(f\"bowl_mesh.num_vertices() = {bowl_mesh.num_vertices()}\")\n",
+    "\n",
+    "# Signed distances at pepper points from bowl mesh\n",
+    "# P is the local frame of the pepper\n",
+    "X_WP = query_object.GetPoseInWorld(pepper_id)\n",
+    "vertices = np.zeros([3,1])\n",
+    "colors = np.zeros([3, 1])\n",
+    "first_vertex = True\n",
+    "first_color = True\n",
+    "for p_PQ in pepper_mesh.vertices() :\n",
+    "  p_WQ = X_WP.multiply(p_PQ)\n",
+    "  if first_vertex:\n",
+    "    first_vertex = False\n",
+    "    vertices = p_WQ.reshape([3,1])\n",
+    "  else:  \n",
+    "    vertices = np.hstack((vertices, p_WQ.reshape([3,1])))\n",
+    "  signed_distances = query_object.ComputeSignedDistanceToPoint(p_WQ)\n",
+    "  for d in signed_distances:\n",
+    "    if d.id_G == bowl_id:\n",
+    "      if d.distance > 0:\n",
+    "        color = np.array([[1],\n",
+    "                          [0.2],\n",
+    "                          [0.2]])\n",
+    "      else:  \n",
+    "        color = np.array([[0.2],\n",
+    "                          [0.2],\n",
+    "                          [1]])\n",
+    "      # DrawToNearestPoint(p_WQ, d)\n",
+    "      if first_color:\n",
+    "        first_color = False\n",
+    "        colors = color\n",
+    "      else:\n",
+    "        colors = np.hstack((colors, color))\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "triangles = np.zeros([3,1])\n",
+    "first_triangle = True\n",
+    "for tri in pepper_mesh.triangles() :\n",
+    "  v0 = tri.vertex(0)\n",
+    "  v1 = tri.vertex(1)\n",
+    "  v2 = tri.vertex(2)\n",
+    "  triangle = np.array([[v0],\n",
+    "                       [v1],\n",
+    "                       [v2]])   \n",
+    "  if first_triangle:\n",
+    "    triangles = triangle\n",
+    "    first_triangle = False\n",
+    "  else:\n",
+    "    triangles = np.hstack((triangles, triangle))    \n",
+    "\n",
+    "meshcat.Delete(\"BellPepper_with_BowlSDF\")\n",
+    "meshcat.SetTriangleColorMesh(\"BellPepper_with_BowlSDF/shade\",\n",
+    "                         vertices, triangles, colors, wireframe=False)\n",
+    "meshcat.SetTriangleColorMesh(\"BellPepper_with_BowlSDF/wireframe\",\n",
+    "                         vertices, triangles, colors, wireframe=True)\n",
+    "    \n",
+    "print(\"Done\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Download simulation result into a html file for sharing\n",
     "\n",
     "You can download the simulation result into a self-contained html file, allowing others to playback the simulated results without simulating. The following code prints the URL for downloading. Click on the printed URL to download."
@@ -1151,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
